<resources>
    <string name="app_name">Learning Aid</string>
    <string name="guest">Guest</string>
    <string name="level">Level %1$d</string>
    <string name="xp" translatable="false">%1$d XP</string>
    <string name="sign_in_to_sync">Sign in to synchronize data</string>
    <string name="sign_in_email">Sign in with email</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="enable_sound">Enable sound</string>
    <string name="change_language">Change language</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="sign_out">Sign out</string>
    <string name="reset">Reset</string>
    <string name="percent" translatable="false">%1$d%%</string>
    <string name="out_of" translatable="false">%1$d/%2$d</string>
    <string name="question">1 question</string>
    <string name="questions">%1$d questions</string>
    <string name="continue_button">Continue</string>
    <string name="try_again">Try again</string>
    <string name="check">Check</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="hint">Hint</string>
    <string name="unlock">Unlock</string>
    <string name="dialog_hint_title">Get a Hint</string>
    <string name="dialog_hint_body">Use 5XP of your %1$dXP to get a hint.</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_unlock_title">Unlock Answer</string>
    <string name="dialog_unlock_body">Use 15XP of your %1$dXP to unlock the correct answer.</string>
    <string name="dialog_language_title">Change language</string>
    <string name="dialog_language_body">Change language from English to Romanian?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_name">Enter name</string>
    <string name="connection_needed">Connection needed</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="empty_fields">Fill in all fields</string>
    <string name="existent_account">The account already exists</string>
    <string name="login_success">Login successful</string>
    <string name="error">Error, try later</string>
    <string name="link_account">Account linked successfully</string>
    <string name="sign_in_google_reason">You must sign in with Google to continue.</string>
    <string name="pick_image">Pick a image</string>
    <string name="later">Later</string>
    <string name="signing_out">Signing out…</string>
    <string name="feed">News Feed</string>
    <string name="permission">Permission needed</string>
    <string name="loading">Loading…</string>
    <string name="edit_name">Edit name</string>
    <string name="change_picture">Change picture</string>
    <string name="save">Save</string>
    <string name="find_people">Find people</string>
    <string name="not_enough_xp">Not enough XP</string>
    <string name="search_by">Search by name or email</string>
    <string name="empty_feed">Feed is empty, follow people and start learning!</string>
    <string name="you_joined">You joined Learning Aid.</string>
    <string name="you_follow">You started following %1$s.</string>
    <string name="you_unfollow">You stopped following %1$s.</string>
    <string name="you_created">You created lesson %1$s.</string>
    <string name="you_started">You started lesson %1$s.</string>
    <string name="you_completed">You completed lesson %1$s.</string>
    <string name="you_reached">You reached level %1$d.</string>
    <string name="user_joined">%1$s joined Learning Aid.</string>
    <string name="user_follow">%1$s started following %2$s.</string>
    <string name="user_unfollow">%1$s stopped following %2$s.</string>
    <string name="user_created">%1$s created lesson %2$s.</string>
    <string name="user_started">%1$s started lesson %2$s.</string>
    <string name="user_completed">%1$s completed lesson %2$s.</string>
    <string name="user_reached">%1$s reached level %2$d.</string>
    <string name="user_follow_you">%1$s started following you.</string>
    <string name="user_unfollow_you">%1$s stopped following you.</string>
    <string name="read">Read before using the app!</string>
    <string name="warning">Please be aware that the app is still in development and you might encounter crashes and bugs. The app was created for a software competition and the current data is only for testing, the author it is SoloLearn. Thank you, have fun learning!</string>
    <string name="no_results">No results found for \"%1$s\".</string>
    <string name="modify_data">Modify data</string>
    <string name="lesson">Lesson</string>
    <string name="chapter">Chapter</string>
    <string name="module">Module</string>
    <string name="create_info_question">Create a information or question</string>
    <string name="create_new_lesson">Create new lesson…</string>
    <string name="create_new_chapter">Create new chapter…</string>
    <string name="create_new_module">Create new module…</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="position">Position</string>
    <string-array name="data_add_options">
        <item>Information</item>
        <item>Question</item>
    </string-array>
    <string-array name="data_solving_types">
        <item>Fill in</item>
        <item>Single choice</item>
        <item>Multiple choice</item>
        <item>Drag in order</item>
        <item>Drag and drop</item>
    </string-array>
</resources>
