<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".activity.DataActivity">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/modify_data"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/editLesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:completionThreshold="1"
        android:hint="@string/lesson"
        android:imeOptions="actionNone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorBlack" />

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/editChapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:completionThreshold="1"
        android:hint="@string/chapter"
        android:imeOptions="actionNone"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editLesson"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorBlack" />

    <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
        android:id="@+id/editModule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:completionThreshold="1"
        android:hint="@string/module"
        android:imeOptions="actionNone"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editChapter"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/create_info_question"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editModule" />

</android.support.constraint.ConstraintLayout>