<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akitektuo.educationalaid.activity.EditActivity">

    <ImageView
        android:id="@+id/buttonBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/edit_profile"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonBack" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_picture_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    <ImageView
        android:id="@+id/imageRemove"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/remove"
        app:layout_constraintBottom_toBottomOf="@+id/imageProfile"
        app:layout_constraintEnd_toEndOf="@+id/imageProfile"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="@+id/imageProfile"
        app:layout_constraintTop_toTopOf="@id/imageProfile"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textChangePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/change_picture"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_name"
        android:imeOptions="actionDone"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChangePicture"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextColor="@color/colorBlack" />

    <TextView
        android:id="@+id/textSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

</android.support.constraint.ConstraintLayout>
