<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageProfile"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile_picture_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/guest"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile" />

    <TextView
        android:id="@+id/textLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/level"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textName" />

    <ProgressBar
        android:id="@+id/progressLevel"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:progress="50"
        android:progressBackgroundTint="@color/colorSilverDark"
        android:scaleY="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLevel" />

    <TextView
        android:id="@+id/textCurrentXp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/xp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressLevel"
        app:layout_constraintEnd_toEndOf="@+id/progressLevel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/progressLevel"
        app:layout_constraintTop_toBottomOf="@+id/textLevel" />

    <TextView
        android:id="@+id/textTargetXp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/xp"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/progressLevel"
        app:layout_constraintEnd_toEndOf="@+id/progressLevel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/progressLevel"
        app:layout_constraintTop_toBottomOf="@+id/textLevel" />

    <TextView
        android:id="@+id/textContentDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in"
        android:textColor="@color/colorSilverDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressLevel" />

    <ImageView
        android:id="@+id/imageBarContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textContentDescription"
        app:srcCompat="@color/colorSilverLight" />

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBarContent"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageBarEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageEmail"
        app:layout_constraintStart_toEndOf="@+id/imageEmail"
        app:layout_constraintTop_toTopOf="@+id/imageEmail"
        app:srcCompat="@color/colorSilverLight" />

    <Button
        android:id="@+id/buttonEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:text="@string/sign_in_email"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageBarEmail"
        app:layout_constraintTop_toTopOf="@+id/imageEmail" />

    <ImageView
        android:id="@+id/imageGoogle"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:elevation="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageEmail"
        app:srcCompat="@drawable/google" />

    <ImageView
        android:id="@+id/imageBarGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageGoogle"
        app:layout_constraintStart_toEndOf="@+id/imageGoogle"
        app:layout_constraintTop_toTopOf="@+id/imageGoogle"
        app:srcCompat="@color/colorSilverLight" />

    <Button
        android:id="@+id/buttonGoogle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_red_dark"
        android:elevation="4dp"
        android:text="@string/sign_in_google"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageBarGoogle"
        app:layout_constraintTop_toTopOf="@+id/imageGoogle" />

    <ImageView
        android:id="@+id/imageFacebook"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:elevation="4dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGoogle"
        app:srcCompat="@drawable/facebook" />

    <ImageView
        android:id="@+id/imageBarFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageFacebook"
        app:layout_constraintStart_toEndOf="@+id/imageFacebook"
        app:layout_constraintTop_toTopOf="@+id/imageFacebook"
        app:srcCompat="@color/colorSilverLight" />

    <Button
        android:id="@+id/buttonFacebook"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/holo_blue_dark"
        android:elevation="4dp"
        android:text="@string/sign_in_facebook"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageBarFacebook"
        app:layout_constraintTop_toTopOf="@+id/imageFacebook" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_feed"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBarContent" />

    <android.support.constraint.Group
        android:id="@+id/groupEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="imageEmail, imageBarEmail, buttonEmail" />

    <android.support.constraint.Group
        android:id="@+id/groupGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageGoogle, imageBarGoogle, buttonGoogle" />

    <android.support.constraint.Group
        android:id="@+id/groupFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="imageFacebook, imageBarFacebook, buttonFacebook" />

</android.support.constraint.ConstraintLayout>